Improve contrast of selected categories. It could be unclear, especially on dim screens. This fixes one of the open issues.

--- a/scss/boxShadows.scss
+++ b/scss/boxShadows.scss
@@ -1,25 +1,28 @@
+@mixin bs-white-s0 {
+  box-shadow: 0 0px 1px rgba(255,255,255,0.12),
+              0 0px 1px rgba(255,255,255,0.18);
+}
 @mixin bs-white-0 {
-  // box-shadow: 0 1px 3px rgba(255,255,255,0.16), 0 1px 3px rgba(255,255,255,0.23);
   box-shadow: 0 0px 1px rgba(255,255,255,0.16),
               0 0px 1px rgba(255,255,255,0.23);
 }
 @mixin bs-white-0b {
-  // box-shadow: 0 1px 3px rgba(255,255,255,0.16), 0 1px 3px rgba(255,255,255,0.23);
   box-shadow: 0 0px 2px rgba(255,255,255,0.16),
               0 0px 2px rgba(255,255,255,0.23);
 }
 @mixin bs-white-1 {
-  // box-shadow: 0 1px 3px rgba(255,255,255,0.16), 0 1px 3px rgba(255,255,255,0.23);
   box-shadow: 0 0px 6px rgba(255,255,255,0.16),
               0 0px 6px rgba(255,255,255,0.23);
 }
+@mixin bs-white-1b {
+  box-shadow: 0 0px 4px rgba(255,255,255,0.20),
+              0 0px 4px rgba(255,255,255,0.28);
+}
 @mixin bs-white-2 {
-  // box-shadow: 0 3px 6px rgba(255,255,255,0.16), 0 3px 6px rgba(255,255,255,0.23);
   box-shadow: 0 0px 10px rgba(255,255,255,0.16),
               0 0px 10px rgba(255,255,255,0.23);
 }
 @mixin bs-white-3 {
-  // box-shadow: 0 10px 20px rgba(255,255,255,0.16), 0 6px 6px rgba(255,255,255,0.23);
   box-shadow: 0 0px 20px rgba(255,255,255,0.16),
               0 0px 20px rgba(255,255,255,0.23);
 }
